<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_login_bg">

    <com.qckj.dabei.view.ActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:function="button_left|text_title"
        app:text_title="@string/mine_login" />

    <TextView
        android:id="@+id/mine_go_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:text="@string/mine_go_go"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/login_account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_go_go"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/mine_account_password_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_account_password"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/mine_verification_code_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/other_login_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_verification_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/mine_other_way_login"
            android:textColor="@color/white" />

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/other_login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/qq_login_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_login_qq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/mine_qq_login" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/wx_login_ll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_login_wx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/mine_login_wx" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/line" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/app_cancel"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/mine_login_agreement"
        android:textColor="@color/white" />

</RelativeLayout>