<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qckj.dabei.view.ActionBar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:function="button_left|text_title|text_right"
        app:srcLeft="@drawable/back_bg_selector"
        app:text_right="@string/finish"
        app:text_title="@string/mine_modify_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line" />

    <EditText
        android:id="@+id/input_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg_shape"
        android:hint="@string/mine_user_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textSize="18sp"
        tools:ignore="AutoFill" />

</LinearLayout>