<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.qckj.dabei.view.ActionBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:function="text_title|button_left"
        app:srcLeft="@drawable/back_bg_selector"
        app:text_title="@string/mine_bind_phone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:background="@color/line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/mine_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/mine_phone"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@id/get_verification_code"
            android:layout_toEndOf="@id/mine_phone"
            android:background="@null"
            android:hint="@string/mine_input_phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/mine_verification_code"
            android:textColor="@color/nearby_head_btn" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/mine_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/mine_verification_code_info"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/mine_verification_code"
            android:background="@null"
            android:hint="@string/mine_input_verification_code"
            android:inputType="number"
            android:maxLength="11"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textSize="15sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_alignParentBottom="true"
            android:background="@color/line" />

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/mine_login"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>